# timeit-hs

./: LICENSE  README.md  timeit-hs.cabal
examples/: timeit.hs
src/System/: TimeitHs.hs
