name:                timeit-hs
version:             0.0.1
synopsis:            Simple timing package. Measure total elapsed time, total cpu time, and total cpu ticks of a given a function or IO action. Pure & IO forms.
description:
    Simple library to time the execution of an arbitrary function.
    Timing results are provided as total elapsed time, total cpu time,
    and total cpu ticks that occurred during execution of the function.
homepage:            https://github.com/adarqui/timeit-hs
bug-reports:         https://github.com/adarqui/timeit-hs/issues
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules:
        System.TimeitHs
    build-depends:      base >= 4, criterion == 1.0.2.0, unix-time
    ghc-options:        -Wall
    hs-source-dirs:     src/

executable "timeit-example"
    main-is:            timeit.hs
    hs-source-dirs:     examples
    build-depends:      base >= 4, timeit-hs
    ghc-options:        -Wall

source-repository head
    type:     git
    location: https://github.com/adarqui/timeit-hs
